force-app/main/default/objects/Create_Lead__e/Create_Lead__e.object-meta.xml
<CustomObject>
    <label>Create Lead</label>
    <pluralLabel>Create Leads</pluralLabel>
</CustomObject>