force-app/main/default/objects/Create_Lead__e/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <label>Country of Residence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>