force-app/main/default/objects/Create_Lead__e/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>